objects/ssot__PartyFinancialAsset__dlm.object
<CustomObject>
    <fields>
        <fullName>ssot__AssetId__c</fullName>
        <label>Asset</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Currency__c</fullName>
        <label>Currency</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceId__c</fullName>
        <label>Data Source</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DataSourceObjectId__c</fullName>
        <label>Data Source Object</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__DeclarationDateTime__c</fullName>
        <label>Declaration Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__Description__c</fullName>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__EndDate__c</fullName>
        <label>End Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__FinancialAssetType__c</fullName>
        <label>Financial Asset Type</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__Id__c</fullName>
        <label>Party Financial Asset Id</label>
        <length>15</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__InternalOrganizationId__c</fullName>
        <label>Internal Organization</label>
        <length>60</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__MarketValue__c</fullName>
        <label>Market Value</label>
        <precision>18</precision>
        <scale>4</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__OwnershipEndDateTime__c</fullName>
        <label>Ownership End Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__OwnershipPercent__c</fullName>
        <label>Ownership Percent</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ssot__OwnershipStartDateTime__c</fullName>
        <label>Ownership Start Date Time</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__PartyFinancialAssetStatus__c</fullName>
        <label>Party Financial Asset Status</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__PartyId__c</fullName>
        <label>Party</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ssot__StartDate__c</fullName>
        <label>Start Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__ValuationDate__c</fullName>
        <label>Valuation Date</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>ssot__rel_1697761237255_end__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>PartyFinancialAsset_PartyId_map_Part_rel</label>
        <referenceTo>ssot__Party__dlm</referenceTo>
        <relationshipLabel>PartyFinancialAsset_PartyId_map_Part_rel</relationshipLabel>
        <relationshipName>rel_1697761237255_end</relationshipName>
        <type>Lookup</type>
    </fields>
</CustomObject>